[gd_scene load_steps=20 format=3 uid="uid://de35ssdr6vji2"]

[ext_resource type="Script" path="res://GDScripts/Minigames/MusicBox/music_box_puzzle_ui.gd" id="1_u8u0k"]
[ext_resource type="PackedScene" uid="uid://d2o1dp1whs47j" path="res://Scenes/PuzzleScenes/MusicBox/music_box_button.tscn" id="2_280mx"]
[ext_resource type="Shader" path="res://Art/Shaders/PauseMenu.gdshader" id="2_bxvsf"]
[ext_resource type="Texture2D" uid="uid://cgylf8adcfml7" path="res://Art/2D/MusicBox/Replay.png" id="3_2o2pd"]
[ext_resource type="Texture2D" uid="uid://b8okn3hlx8hs7" path="res://Art/2D/MusicBox/Restart.png" id="3_pkus4"]
[ext_resource type="Texture2D" uid="uid://bqhshgjm1qe66" path="res://Art/2D/MusicBox/Note template.png" id="5_n580u"]
[ext_resource type="Texture2D" uid="uid://cl4por2hcm5si" path="res://Art/2D/MusicBox/B.png" id="7_ansuw"]
[ext_resource type="Script" path="res://GDScripts/Minigames/MusicBox/music_box_main_audio.gd" id="7_cmoox"]
[ext_resource type="AudioStream" uid="uid://chff23og2wmt3" path="res://Art/Audio/SFX/failure_wrong.wav" id="8_aqpck"]
[ext_resource type="AudioStream" uid="uid://cnhn66ulanh0p" path="res://Art/Audio/SFX/MusicBoxPuzzle/HannahSounds/B.mp3" id="8_urven"]
[ext_resource type="Texture2D" uid="uid://ba1v54kb2ac2i" path="res://Art/2D/MusicBox/C.png" id="9_icb81"]
[ext_resource type="Texture2D" uid="uid://c6uypw5be37jf" path="res://Art/2D/MusicBox/G#.png" id="9_xq7nn"]
[ext_resource type="PackedScene" uid="uid://bfsp8t43p6eba" path="res://Scenes/UIScenes/explanation_panel.tscn" id="9_y224s"]
[ext_resource type="AudioStream" uid="uid://cnd1dofrxf6y" path="res://Art/Audio/SFX/MusicBoxPuzzle/HannahSounds/G#.mp3" id="10_0a5x4"]
[ext_resource type="Script" path="res://GDScripts/Minigames/MusicBox/music_box_puzzle_fail.gd" id="10_f3iwp"]
[ext_resource type="AudioStream" uid="uid://bvxwqflrjw87l" path="res://Art/Audio/SFX/MusicBoxPuzzle/HannahSounds/C#.mp3" id="12_5a370"]
[ext_resource type="Texture2D" uid="uid://8r62pfxpwu6y" path="res://Art/2D/MusicBox/D#.png" id="13_d1c5b"]
[ext_resource type="AudioStream" uid="uid://dy7hu76sun3ph" path="res://Art/Audio/SFX/MusicBoxPuzzle/HannahSounds/D# (low).mp3" id="14_otoh2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_upv33"]
shader = ExtResource("2_bxvsf")
shader_parameter/lod = 0.8

[node name="MusicBoxPuzzleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8u0k")
puzzle_type = 1

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0768358, 0.0768358, 0.0768358, 0.588235)

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_upv33")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RetryButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.82
anchor_top = 0.094
anchor_right = 0.82
anchor_bottom = 0.094
offset_left = 65.5999
offset_top = -48.52
offset_right = 292.6
offset_bottom = 67.48
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="RetryButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.368057
anchor_top = 0.509103
anchor_right = 0.601537
anchor_bottom = 0.509103
offset_left = -105.549
offset_top = -132.056
offset_right = 105.451
offset_bottom = 131.944
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pkus4")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ReplayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117688
anchor_top = 0.3598
anchor_right = 0.117688
anchor_bottom = 0.3598
offset_left = -89.9601
offset_top = -45.584
offset_right = 90.0399
offset_bottom = 45.416
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ReplayButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.472
anchor_top = 0.5
anchor_right = 0.472
anchor_bottom = 0.5
offset_left = -107.961
offset_top = -116.5
offset_right = 108.039
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2o2pd")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SoundwaveImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_n580u")

[node name="B" parent="." instance=ExtResource("2_280mx")]
layout_mode = 1
anchor_left = 0.271979
anchor_top = 0.801889
anchor_right = 0.271979
anchor_bottom = 0.801889
offset_left = -67.2
offset_top = -68.04
offset_right = 68.8
offset_bottom = 67.96
icon = ExtResource("7_ansuw")
expand_icon = true
sound = ExtResource("8_urven")

[node name="G#" parent="." instance=ExtResource("2_280mx")]
layout_mode = 1
anchor_left = 0.465792
anchor_top = 0.591074
anchor_right = 0.465792
anchor_bottom = 0.591074
icon = ExtResource("9_xq7nn")
expand_icon = true
sound = ExtResource("10_0a5x4")

[node name="C#" parent="." instance=ExtResource("2_280mx")]
layout_mode = 1
anchor_left = 0.184021
anchor_top = 0.590148
anchor_right = 0.184021
anchor_bottom = 0.590148
icon = ExtResource("9_icb81")
expand_icon = true
sound = ExtResource("12_5a370")

[node name="D# (low)" parent="." instance=ExtResource("2_280mx")]
layout_mode = 1
anchor_left = 0.746521
anchor_top = 0.801259
anchor_right = 0.746521
anchor_bottom = 0.801259
icon = ExtResource("13_d1c5b")
expand_icon = true
sound = ExtResource("14_otoh2")

[node name="MainAudio" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
script = ExtResource("7_cmoox")
puzzle_sounds = Array[AudioStream]([ExtResource("8_urven"), ExtResource("10_0a5x4"), ExtResource("12_5a370"), ExtResource("14_otoh2")])
failure_sound = ExtResource("8_aqpck")

[node name="ExplanationPanel" parent="." instance=ExtResource("9_y224s")]
layout_mode = 1
puzzle_type = 1
label_text = "This puzzle uses sound (SFX - in game)
Please make sure your sound is on!

Match the order of the sounds based on what you hear"

[node name="PuzzleFail" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.27451)
script = ExtResource("10_f3iwp")
failure_color = Color(1, 0, 0, 0.27451)
success_color = Color(0, 1, 0, 0.27451)

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
